# neu

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  neu.json
.codex/: config.toml  raise-issues.md  work-on-issues.md
.codex/agents/: adversarial-engineer.md  adversarial-engineer.toml  build-engineer.md  build-engineer.toml  chief-architect.md  chief-architect.toml  diagnostics-engineer.md  diagnostics-engineer.toml  implementer.md  implementer.toml  language-designer.md  language-designer.toml  language-lawyer.md  (+13 more)
crates/compiler/: Cargo.toml
crates/compiler/src/: ast.rs  backend.rs  bootstrap.rs  borrow.rs  coroutine.rs  dependency.rs  driver.rs  hir.rs  lexer.rs  lib.rs  linker.rs  manifest.rs  mir.rs  module.rs  ownership.rs  ownership_effects.rs  parser.rs  runtime.rs  source.rs  target_pack.rs  thread.rs  type_check.rs  types.rs  unsafe_boundary.rs
crates/compiler/tests/: arrays.rs  ast.rs  backend.rs  bootstrap.rs  borrow.rs  channels.rs  classes.rs  coroutine.rs  cross_target_pack.rs  dependency.rs  driver.rs  hir.rs  host_target_pack.rs  lexer.rs  linker.rs  manifest.rs  mir.rs  module.rs  name_resolution.rs  object.rs  ownership.rs  ownership_effects.rs  parser.rs  runtime.rs  strings.rs  symbol.rs  target_pack.rs  target_pack_inventory.rs  target_pack_registry.rs  thread.rs  type_check.rs  types.rs  unsafe_boundary.rs
docs/: AGENTS.md  AMBIGUITY_REPORT_TEMPLATE.md  REVIEW_TEMPLATE.md  ROADMAP.md  SOUNDNESS_REPORT_TEMPLATE.md  SPEC.md  TASK_TEMPLATE.md  build.md  diagnostics.md  test-harness.md
examples/: function_types.neu
stdlib/: neu.json
(+1339 files in other folders)
