[package]
name = "compiler"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
cranelift-codegen = "0.133.1"
cranelift-frontend = "0.133.1"
cranelift-module = "0.133.1"
cranelift-object = "0.133.1"
object = "0.39"
serde = { version = "1", features = ["derive"] }
target-lexicon = "0.13.3"
toml = "0.8"
