[package]
name = "compiler"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
cranelift-codegen = { version = "0.133.1", features = ["x86"] }
cranelift-frontend = "0.133.1"
cranelift-module = "0.133.1"
cranelift-object = "0.133.1"
object = "0.39"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
target-lexicon = "0.13.3"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
